# prose

./: .gitattributes  .gitignore  .plugin-meta.json  .true-up.json  .version-bump.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXPERIMENTS-workflow-borrowings.md  PRIVACY.md  README.md  RELEASE.md  TERMS.md  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.claude-plugin/: README.md  marketplace.json  plugin.json
.codex-plugin/: plugin.json
assets/: README.md
cli/: POST_RELEASE_PLAYTEST.md  README.md  RELEASE.md  install.sh  package-lock.json  package.json  tsconfig.build.json
commands/: README.md  prose-boot.md  prose-handoff.md  prose-inspect.md  prose-lint.md  prose-preflight.md  prose-run.md  prose-status.md
crates/openprose-lint/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
crates/openprose-lint/docs/: AGENTS.md  README.md  spec-integration.md
crates/openprose-lint/docs/specs/: 2026-04-15-runtime-conformance-model.md  2026-04-16-adapter-manifest-model.md
crates/openprose-lint/fixtures/current/: context-grounded-summary.prose.md
crates/openprose-lint/scripts/: sync-spec-snapshot.sh
crates/openprose-lint/spec-snapshot/openprose/skills/open-prose/: contract-markdown.md  reactor.md
crates/openprose-lint/specs/: AGENTS.md  adapter-manifest-schema.json  conformance-capability-schema.json  openprose.json
crates/openprose-lint/specs/adapters/: claude-code-v1-md.json  codex-v1-md.json  hermes-v1-md.json  pi-v1-md.json
crates/openprose-lint/specs/runtime-subjects/: claude-code-self-declared.json  codex-host-mediated-self-declared.json  hermes-host-mediated-self-declared.json  pi-no-extensions-self-declared.json
crates/openprose-lint/src/: AGENTS.md  adapter.rs  capabilities.rs  cli.rs  current_lint.rs  lint.rs  release.rs  spec.rs  spec_identity.rs  spec_source.rs
crates/openprose-lint/tests/: capabilities_tests.rs  cli_help_tests.rs
docs/: README.md  agent-onboarding.md  measurement.md  (+11 more)
tools/lint/: Cargo.toml  README.md  build.rs
tools/lint/src/: lib.rs  lint.rs  lint_legacy.rs  main.rs  wasm.rs
(+1895 files in other folders)
