[package]
name = "openprose-lint"
version = "0.1.0"
edition = "2024"
description = "Deterministic linter for OpenProse programs (legacy .prose and .md)"
license = "MIT"
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM-only deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Native-only deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"
